[package]
name = "collab-service-warp"
version = "0.1.0"
authors = ["stefan.baumgartner <Stefan.Baumgartner@dynatrace.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
